syntax = "proto3";

package sum;

option go_package = "github.com/melliston/go-protobuf/sum/proto";

message SumRequest {
  int number1 = 1;
  int number2 = 2;
}

message SumResponse {
  int sum = 1;
}

service SumService {
  rpc Sum(SumRequest) returns (SumResponse);
}